<resources>
    <string name="app_name">Inventory App</string>

    <string name="explanation">Add a product by pressing the button above. Afterwards touch a product entry in order to modify it.
        Each product has at least one supplier. You can touch a supplier entry in order to modify it.</string>

    <string name="add_another_supplier">Do you want to add another supplier?</string>

    <string name="should_product_be_deleted">Should this product and all of its suppliers be deleted?</string>
    <string name="should_all_products_be_deleted">Should all products and their suppliers be deleted?</string>
    <string name="should_supplier_be_deleted">Should this supplier be deleted?</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="add_supplier">Add supplier</string>
    <string name="add_product">Add Product</string>
    <string name="save_product_details">Save product details</string>

    <string name="sell">Sell</string>
    <string name="order">Order</string>

    <string name="delete">Delete</string>
    <string name="delete_all_products">Delete all products</string>

    <string name="product_name">Product Name:</string>
    <string name="price">Price:</string>
    <string name="quantity">Quantity:</string>

    <string name="label_suppliers">Suppliers:</string>
    <string name="label_supplier_name">Supplier\'s name:</string>
    <string name="label_supplier_country_code">Supplier\'s country code:</string>
    <string name="label_supplier_phone">Supplier\'s phone:</string>

    <string name="cancel">Cancel</string>
    <string name="return_">Return</string>
    <string name="save">Save</string>
    <string name="continue_">Continue</string>

    <string name="error_unknown_uri">Cannot query unknown URI %1$s</string>
    <string name="error_unknown_uri_with_match">Unknown URI %1$s with match %2$d</string>
    <string name="error_insertion_not_supported_for_uri">Insertion is not supported for %1$s</string>
    <string name="error_failed_to_insert_row_for_uri">Failed to insert row for %1$s</string>
    <string name="error_supplier_requires_a_name">Supplier requires a name.</string>
    <string name="error_product_requires_a_name">Product requires a name.</string>
    <string name="error_country_code_missing">Please specify the country code for supplier\'s phone number.</string>
    <string name="error_phone_number_missing">A phone number should be specified.</string>
    <string name="error_quantity_should_be_at_least_zero">The quantity should be at least 0.</string>
    <string name="error_product_id_should_be_at_least_one">The product id should be at least 1.</string>
    <string name="error_price_should_be_at_least_one">The price should be at least 1.</string>
    <string name="error_deletion_is_not_supported_for_uri">Deletion is not supported for %1$s</string>
    <string name="error_update_is_not_supported_for_uri">Update is not supported for %1$s</string>
    <string name="error_suppliers_dont_have_product">Your suppliers don\'t have this product.</string>
    <string name="error_unable_to_sell_one_product_item_for_uri">Unable to sell one product item for URI %1$s</string>
    <string name="error_nothing_updated">Nothing was updated!</string>
    <string name="error_nothing_was_deleted">Nothing was deleted!</string>
    <string name="error_price_too_large_or_invalid_number">The price is too large or is an invalid number.</string>
    <string name="error_at_least_one_supplier_needed">A product needs at least one supplier.</string>
</resources>
