<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants">

    <TextView
        android:id="@+id/label_supplier_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/supplier_name"
        android:text="@string/label_supplier_name"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/supplier_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/label_supplier_name" />

    <Button
        android:id="@+id/delete_supplier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/label_supplier_name" />

    <TextView
        android:id="@+id/label_supplier_country_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/supplier_country_code"
        android:text="@string/label_supplier_country_code"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/supplier_name" />

    <TextView
        android:id="@+id/supplier_country_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/label_supplier_country_code" />

    <TextView
        android:id="@+id/label_supplier_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/supplier_phone"
        android:text="@string/label_supplier_phone"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/supplier_country_code" />

    <TextView
        android:id="@+id/supplier_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/label_supplier_phone" />

    <TextView
        android:id="@+id/label_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/quantity"
        android:text="@string/quantity"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/supplier_phone" />

    <TextView
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/label_quantity" />
</android.support.constraint.ConstraintLayout>