<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/navigation_bar"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="closeScreen"
            android:text="@string/return_" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="saveSupplier"
            android:text="@string/save" />
    </LinearLayout>

    <TextView
        android:id="@+id/label_supplier_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/supplier_name"
        android:text="@string/label_supplier_name"
        app:layout_constraintTop_toBottomOf="@+id/navigation_bar" />

    <EditText
        android:id="@+id/supplier_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_supplier_name"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/label_supplier_name" />

    <TextView
        android:id="@+id/label_supplier_country_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/supplier_country_code"
        android:text="@string/label_supplier_country_code"
        app:layout_constraintTop_toBottomOf="@id/supplier_name" />

    <EditText
        android:id="@+id/supplier_country_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_supplier_country_code"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/label_supplier_country_code" />

    <TextView
        android:id="@+id/label_supplier_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/supplier_phone"
        android:text="@string/label_supplier_phone"
        app:layout_constraintTop_toBottomOf="@id/supplier_country_code" />

    <EditText
        android:id="@+id/supplier_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_supplier_phone"
        android:inputType="phone"
        app:layout_constraintTop_toBottomOf="@id/label_supplier_phone" />

    <TextView
        android:id="@+id/label_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/quantity"
        android:text="@string/quantity"
        app:layout_constraintTop_toBottomOf="@id/supplier_phone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/label_quantity">

        <EditText
            android:id="@+id/quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/quantity"
            android:inputType="numberDecimal" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="decreaseQuantity"
            android:text="-" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="increaseQuantity"
            android:text="+" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>